# YouYoQt

./: .clang-format  .gitignore  CMakeLists.txt  Res.qrc  Test.cpp  Test.h  Test.ui  YouyoQT.pro  config.cmake  logo.rc  main.cpp
CEFWrapper/: README.txt
CEFWrapper/cmake/: cef_variables.cmake
QCef/QCefWidget/: CMakeLists.txt  QCefWidget.cpp
QCef/QCefWidget/Include/: QCefUserDefined.h  QCefVersion.h  QCefWidget.h
QCef/QCefWing/: CMakeLists.txt
QtCreatorTheme/: oneDarkQT.xml  readme.md
cefsimple/: CMakeLists.txt  cefsimple_win.cc  simple_app.cc  simple_handler.cc  simple_handler_win.cc
home/: CHarts.cpp  CHarts.cpp~RF1b602d.TMP  CHarts.cpp~RF7f4ffa.TMP  CHarts.cpp~RF7f5c7e.TMP  CHarts.cpp~RF905315.TMP  CHarts.h  CHarts.ui  Carousel.cpp  Carousel.h  Carousel.ui  MainWindowHome.cpp  MainWindowHome.h  MainWindowHome.ui  MyLeftBar.cpp  MyLeftBar.h  MyLeftBar.ui  MyTableWidget.cpp  MyTableWidget.h  MyTableWidget.ui  MyTitleBar.cpp  MyTitleBar.h  NetWorkWidget.cpp  NetWorkWidget.h
login/: LineEditLabel.cpp  LineEditLabel.h  LineEditPassword.ui  MyToolButton.cpp  MyToolButton.h  ToolButtonIconText.cpp  ToolButtonIconText.h  loginDialog.cpp  loginDialog.h  loginDialog.ui
res/qss/: darktheme.css
res/qss/defaultstyle/: LineEditLabel.css  MyToolButton.css  application.css  application.qss  carousel.css  darkTheme.css  login.css  systemsetting.css  top.css
setting/: MainWindowSetting.cpp  MainWindowSetting.h  SettingDialog.cpp  SettingDialog.h  SystemSettingMainWindow.cpp  SystemSettingMainWindow.h
src/: CMakeLists.txt  Res.qrc  Test.cpp  Test.ui  main.cpp  testdata.txt  youyo.manifest
src/home/: CHarts.cpp  CHarts.h  CHarts.ui  Carousel.h  MainWindow.cpp  MainWindowHome.cpp  MainWindowHome.ui  MyLeftBar.cpp  MyLeftBar.h  MyLeftBar.ui  MyTableWidget.cpp  MyTitleBar.cpp  MyTitleBar.h  NetWorkWidget.ui
src/login/: MyToolButton.cpp  MyToolButton.h  MyToolButton.ui  loginDialog.cpp  loginDialog.ui
src/res/qss/: darktheme.css
src/res/qss/defaultstyle/: LineEditLabel.css  left.css  leftbar.css  lefttop.css  mainHome.css  top.css
src/setting/: MainWindowSetting.h  MainWindowSetting.ui  SettingDialog.cpp  SettingDialog.h  SettingDialog.ui  SystemSettingMainWindow.cpp  SystemSettingMainWindow.ui
src/utility/: CommonUtility.cpp  CommonUtility.h
src/web/: LTableView.cpp  LTableView.h  LabelDelegate.cpp  LabelDelegate.h  MyWeatherWidget.cpp  MyWeatherWidget.h  MyWeatherWidget.ui  RowDelegate.cpp  RowDelegate.h  client.cpp  client.h  weather.cpp  weather.h
test/QCefWidgetTest/: BrowserListItem.cpp  CMakeLists.txt  TestWnd.cpp
utility/: CommonUtility.cpp  CommonUtility.h
